[package]
name = "mnist-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
ndarray = { version = "0.15", default-features = false }
ndarray-rand = "0.14"
bhtsne = "0.4.0"
linfa = { version = "0.5.0", features = ["intel-mkl-system"] } 
linfa-reduction = "0.5.0"
linfa-svm = "0.5.0"
mnist = { version = "0.5.0", features = ["download"] }
